LEAR-19 : [BE] add to cart and index cart items
